examples/test/testpolicy18578.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18578
  namespace: namespace93
spec:
  podSelector:
    matchLabels:
      key27: value43
      key20: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value5
      podSelector:
        matchLabels:
          key37: value2
          key39: value39
